--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.properties.hibernate.dialact=org.hibernate.dialect.MySQLDialect
 #spring.servlet.multipart.max-file-size=100MB
 #spring.servlet.multipart.max-request-size=100MB
 #tasks.image.path=images/tasks/
+
+spring.security.user.name=cogent
+spring.security.user.password=cogent@2025
