--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=HouseKeppingApplication
 
+server.port=5005
+server.address=0.0.0.0
+
 spring.datasource.url=jdbc:mysql://localhost:3306/housekeepingapplicationdatabase
 spring.datasource.username=root
 spring.datasource.password=Cogent@2025
