--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,12 @@ spring.jpa.properties.hibernate.dialact=org.hibernate.dialect.MySQLDialect
 
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-tasks.image.path=images/tasks/
+#tasks.image.path=images/tasks/
+tasks.image.path=C:/Users/Cogent-Software/eclipse-workspace/HouseKeppingApplication/images/tasks
 
-spring.security.user.name=cogent
-spring.security.user.password=cogent@2025
+
+
+
+#spring.security.user.name=cogent
+#spring.security.user.password=cogent@2025
+
