--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.example.Demo</groupId>
 	<artifactId>HouseKeppingApplication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging> 
 	<name>HouseKeppingApplication</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
